z index fix for screen tear at bottom on mobile

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -1183,8 +1183,9 @@ html {
             position: absolute;
             bottom: -16%;
             left: 50%;
-            z-index: -1;
+            z-index: 0;
             transform: translateX(-50%);
+            overflow: hidden;
         }
     }
 }
